--- a/src/vibe/scss/components/global.scss
+++ b/src/vibe/scss/components/global.scss
@@ -12,3 +12,13 @@ body {
 hr {
 	border-color: $hrColor;
 }
+
+.preview-block {
+    border: 1px solid #d5dce6;
+    box-shadow: inset 0 2px 0 0 #f2f5f8;
+    height: 300px;
+    border-radius: 5px;
+}
+.form-group{
+    // display: none;
+}
