--- a/src/vibe/scss/components/global.scss
+++ b/src/vibe/scss/components/global.scss
@@ -13,12 +13,92 @@ hr {
 	border-color: $hrColor;
 }
 
-.preview-block {
-    border: 1px solid #d5dce6;
-    box-shadow: inset 0 2px 0 0 #f2f5f8;
-    height: 300px;
-    border-radius: 5px;
+.preview {
+    min-height: 250px;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
 }
+
+.preview-block-container {
+    border: 1px dashed black;
+    width: min-content;
+    height: min-content;  
+    background: rgb(242, 206, 165);
+    position: relative;
+    margin: auto;
+}
+
+.preview-block-container p {
+    position: absolute;
+    top: 1px;
+    left: 5px;
+    font-size: 12px;
+}
+
+.preview-block-container h4 {
+    position: absolute;
+    top: 1px;
+    left: 45%;
+    font-size: 10px;
+}
+
+.margin-preview-block {
+    border: 1px solid black;  
+    background: rgb(248, 222, 164);
+    position: relative;
+}
+
+.margin-preview-block p {
+    position: absolute;
+    top: 1px;
+    left: 5px;
+    font-size: 12px;
+}
+
+.margin-preview-block h4 {
+    position: absolute;
+    top: 1px;
+    left: 44%;
+    font-size: 10px;
+}
+
+.padding-preview-block {
+    border: 1px solid black;   
+    background: rgb(198, 208, 146);
+    position: relative;
+}
+
+.padding-preview-block p {
+    position: absolute;
+    top: 1px;
+    left: 5px;
+    font-size: 12px;
+}
+
+.padding-preview-block h4 {
+    position: absolute;
+    top: 1px;
+    left: 43%;
+    font-size: 10px;
+}
+
+.preview-block {
+    border: 1px solid black;   
+    height: 50px;
+    width: 150px;
+    background: rgb(149, 181, 192);
+}
+
+.preview-block span {
+    line-height: 50px;
+    width: 100%;
+    text-align: center;
+    display: block;
+    font-size: 12px;
+}
+
 .form-group{
     // display: none;
 }
