--- a/src/vibe/scss/components/modals.scss
+++ b/src/vibe/scss/components/modals.scss
@@ -55,3 +55,19 @@
 	color: #7f8fa4;
     font-weight: 400;
 }
+
+.border-modal h5 {
+	color: #7f8fa4;
+	font-weight: 400;
+	padding: 0;
+	margin: 0;
+	font-size: .8rem;
+	margin-top: 10px;
+}
+
+.border-modal h6 {
+	color: #7f8fa4;
+	font-weight: 400;
+	padding: 0;
+	margin: 0;
+}
