--- a/src/vibe/scss/components/primaryNav.scss
+++ b/src/vibe/scss/components/primaryNav.scss
@@ -41,8 +41,9 @@
     }
 
     > img {
-      max-height: 30px;
-      max-width: 30px;
+      max-height: 50px;
+      // max-width: 50px;
+      margin: 10px 0;
       display: inline-block;
     }
 
